<resources>
    <string name="app_name">CancionesV0</string>
    <string name="titulo">Mis canciones</string>
    <string name="nuevo">INSERTAR NUEVO</string>
    <string name="seleccion">No has seleccionado ninguna canción</string>
    <string name="t_titulo">Titulo</string>
    <string name="t_autor">Autor</string>
    <string name="anio">Año</string>
    <string name="tranquila">Tranquila</string>
    <string name="animada">Animada</string>
    <string name="fiesta">Fiesta</string>
    <string name="aceptar">Aceptar</string>
    <string name="tipo">Tipo</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
</resources>
